WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23109
REGRESSION: Backwards search in a long document matches incorrectly
https://bugs.webkit.org/show_bug.cgi?id=23109
Summary
REGRESSION: Backwards search in a long document matches incorrectly
mitz
Reported
2009-01-04 14:51:33 PST
To reproduce: 1) Go to the URL 2) Choose Edit > Find > Find 3) In the search field, type "display" 4) Click the previous match button near the search field Note that the highlighted text is not the word "display".
Attachments
patch
(12.51 KB, patch)
2009-01-04 23:09 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-01-04 20:54:43 PST
Should be simple to fix. I'll look at it tomorrow.
Darin Adler
Comment 2
2009-01-04 21:44:31 PST
Given the structure of the code, it's quite surprising that searching forward works properly and searching backward fails.
Darin Adler
Comment 3
2009-01-04 23:09:01 PST
Created
attachment 26425
[details]
patch
Darin Adler
Comment 4
2009-01-05 11:50:54 PST
http://trac.webkit.org/changeset/39609
Simon Hausmann
Comment 5
2009-01-21 14:39:21 PST
I'd like to note that on a build _without_ the ICU based SearchBuffer the backwards search results in an endless loop, including in the changeset's testcase fast/text/find-backwards.html. It looks like the goto inserted in the last hunk triggers this, but I don't know the code well enough to be sure it's really the goto's fault or just a symptom.
mitz
Comment 6
2009-01-21 14:40:35 PST
(In reply to
comment #5
)
> I'd like to note that on a build _without_ the ICU based SearchBuffer the > backwards search results in an endless loop, including in the changeset's > testcase fast/text/find-backwards.html. It looks like the goto inserted in the > last hunk triggers this, but I don't know the code well enough to be sure it's > really the goto's fault or just a symptom.
Please file a new bug.
Darin Adler
Comment 7
2009-01-21 14:43:19 PST
And please cc me. I'll be happy to take a crack at fixing it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug